--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["day_1", "day_2", "day_3", "day_4"]
+members = ["day_1", "day_2", "day_3", "day_4", "day_5"]
 
 [workspace.dependencies]
 thiserror = "2"
