--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "3"
-members = ["day_1", "day_2", "day_3", "day_4", "day_5"]
+members = ["day_1", "day_2", "day_3", "day_4", "day_5", "day_6"]
 
 [workspace.dependencies]
 thiserror = "2"
+anyhow = "1"
