--- a/day_6/Cargo.toml
+++ b/day_6/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 anyhow.workspace = true
 file_reader = { version = "0.1.0", path = "../file_reader" }
+num-traits = "0.2.19"
 thiserror.workspace = true
